plugins/kotlin/idea/tests/testData/multiplatform/simple/d3/d3.kt
package foo

actual class <!LINE_MARKER("descr='Has expects in d1 module'")!>A<!> {
    fun foo() {}
}
